# c-interpreter

./: ChangeLog.md  README.md  c-interpreter.cabal
app/: Main.hs
code_samples/: double_mult.c  echo.c  for-loop.c  hello-world.c  stdin_multiply.c  subroutine.c
src/: Language.hs
src/Language/: Lexer.x  Parser.y  Syntax.hs
src/Language/Syntax/: AST.hs  Internals.hs  Token.hs
test/Language/: LexerSpec.hs  ParserSpec.hs
test/Language/Syntax/: ASTSpec.hs
